--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,12 +5,37 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_home"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="@string/menu_home"/>
-        <item
                 android:id="@+id/nav_gallery"
-                android:icon="@drawable/ic_menu_gallery"
+                android:icon="@drawable/pictures"
                 android:title="@string/menu_gallery"/>
+        <item
+                android:id="@+id/album"
+                android:icon="@drawable/album"
+                android:title="@string/album"/>
+
+        <item
+                android:id="@+id/camera"
+                android:icon="@drawable/camera"
+                android:title="@string/camera"/>
+
+        <item
+                android:id="@+id/favourites"
+                android:icon="@drawable/favourite"
+                android:title="@string/menu_gallery"/>
+
+        <item
+                android:id="@+id/hidden"
+                android:icon="@drawable/hidden"
+                android:title="@string/hidden"/>
+
+        <item
+                android:id="@+id/locked"
+                android:icon="@drawable/locked"
+                android:title="@string/locked"/>
+
+        <item
+                android:id="@+id/setting"
+                android:icon="@drawable/setting"
+                android:title="@string/setting"/>
     </group>
 </menu>
