--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -7,9 +7,8 @@
     <GridView
             android:id="@+id/galleryGridView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:columnWidth="280dp"
-            android:gravity="center"
+        android:layout_height="match_parent"
+        android:gravity="center"
             android:horizontalSpacing="2dp"
             android:numColumns="2"
             android:padding="2dp"
