--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,19 +8,12 @@
     tools:context=".ui.gallery.GalleryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/rvPictures"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:columnWidth="90dp">
 
     </androidx.recyclerview.widget.RecyclerView>
-
-    <ProgressBar
-        android:id="@+id/loader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        tools:visibility="visible" />
 
 </LinearLayout>
