--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".ui.gallery.GalleryFragment">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Change view"
+        android:id="@+id/btnChangeView" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPictures"
         android:layout_width="match_parent"
