--- a/app/src/main/res/layout/picture_item_gird.xml
+++ b/app/src/main/res/layout/picture_item_gird.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/picLayout"
     android:layout_width="90dp"
     android:layout_height="90dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="1dp"
         android:layout_marginLeft=".5dp"
+        android:layout_marginTop="1dp"
         android:layout_marginRight=".5dp"
         android:layout_marginBottom=".5dp"
         app:cardCornerRadius="1dp">
