--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,10 +8,16 @@
     tools:context=".ui.gallery.GalleryFragment">
 
     <Button
+        android:id="@+id/btnChangeView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Change view"
-        android:id="@+id/btnChangeView" />
+        android:text="Change view" />
+
+    <Button
+        android:id="@+id/btnSort"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sort" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPictures"
