improve UI, add img view screen

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,39 +3,46 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group android:id="@+id/main_nav_group_nor"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/pictures"
+            android:icon="@drawable/gallery"
             android:title="@string/gallery" />
+
         <item
             android:id="@+id/nav_album"
             android:icon="@drawable/album"
-                android:title="@string/album"/>
+            android:title="@string/album"/>
 
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/camera"
-                android:title="@string/camera"/>
+            android:title="@string/camera"/>
 
         <item
             android:id="@+id/nav_favourites"
             android:icon="@drawable/favourite"
             android:title="@string/favourites" />
-
+    </group>
+    <group android:id="@+id/main_nav_group_special"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_hidden"
             android:icon="@drawable/hidden"
-                android:title="@string/hidden"/>
+            android:title="@string/hidden"/>
 
         <item
             android:id="@+id/nav_locked"
             android:icon="@drawable/locked"
-                android:title="@string/locked"/>
-
+            android:title="@string/locked"/>
+    </group>
+    <group android:id="@+id/main_nav_group_other"
+        android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_setting"
-            android:icon="@drawable/setting"
-                android:title="@string/setting"/>
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/settings"
+            android:title="@string/settings"/>
     </group>
 </menu>
+
