--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.setting.SettingFragment">
 
     <TextView
-        android:text="@string/setting"
+        android:text="@string/settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
