--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,7 +41,7 @@
     <fragment
         android:id="@+id/nav_setting"
         android:name="com.example.galleryapp.ui.setting.SettingFragment"
-        android:label="@string/setting"
+        android:label="@string/settings"
         tools:layout="@layout/fragment_setting" />
 
 </navigation>
