--- a/app/src/main/res/layout/fragment_picture_of_folder.xml
+++ b/app/src/main/res/layout/fragment_picture_of_folder.xml
@@ -11,6 +11,13 @@
 <!--    android:layout_width="match_parent"-->
 <!--    android:layout_height="wrap_content">-->
 <!--</TextView>-->
+    <Button
+        android:id="@+id/btnTakePhoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TakePhoto">
+
+    </Button>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
