--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -39,7 +39,7 @@
         android:label="@string/locked"
         tools:layout="@layout/fragment_locked" />
     <fragment
-        android:id="@+id/nav_setting"
+        android:id="@+id/nav_settings"
         android:name="com.example.galleryapp.ui.setting.SettingFragment"
         android:label="@string/settings"
         tools:layout="@layout/fragment_setting" />
