--- a/app/src/main/res/layout/fragment_picture_of_folder.xml
+++ b/app/src/main/res/layout/fragment_picture_of_folder.xml
@@ -11,6 +11,10 @@
 <!--    android:layout_width="match_parent"-->
 <!--    android:layout_height="wrap_content">-->
 <!--</TextView>-->
+    <ImageView
+        android:id="@+id/showingImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ImageView>
     <Button
         android:id="@+id/btnTakePhoto"
         android:layout_width="match_parent"
