sort pictures by name, date, size

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -21,6 +21,11 @@
         android:layout_height="wrap_content"
         android:text="Change view" />
 
+    <Spinner
+        android:id="@+id/spSort"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/btnSort"
         android:layout_width="match_parent"
