update click single image

--- a/app/src/main/res/menu/image_view_option_drawer.xml
+++ b/app/src/main/res/menu/image_view_option_drawer.xml
@@ -12,5 +12,8 @@
             android:title="Hide"/>
         <item android:id="@+id/imgViewLock"
             android:title="Lock"/>
+
     </group>
+    <item android:id="@+id/imgShare"
+        android:title="Share"/>
 </menu>
