--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,22 +7,22 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/gallery"
+            android:icon="@drawable/ic_baseline_photo_library_24"
             android:title="@string/gallery" />
 
         <item
             android:id="@+id/nav_album"
-            android:icon="@drawable/album"
+            android:icon="@drawable/ic_baseline_photo_album_24"
             android:title="@string/album"/>
 
         <item
             android:id="@+id/nav_camera"
-            android:icon="@drawable/camera"
+            android:icon="@drawable/ic_baseline_photo_camera_24"
             android:title="@string/camera"/>
 
         <item
             android:id="@+id/nav_favourites"
-            android:icon="@drawable/favourite"
+            android:icon="@drawable/ic_baseline_favorite_24"
             android:title="@string/favourites" />
     </group>
     <group android:id="@+id/main_nav_group_special"
@@ -34,14 +34,14 @@
 
         <item
             android:id="@+id/nav_locked"
-            android:icon="@drawable/locked"
+            android:icon="@drawable/ic_baseline_lock_24"
             android:title="@string/locked"/>
     </group>
     <group android:id="@+id/main_nav_group_other"
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/settings"
+            android:icon="@drawable/ic_baseline_settings_24"
             android:title="@string/settings"/>
     </group>
 </menu>
