fix show image animation crash app

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <ImageSwitcher
-        android:id="@+id/imgViewQuick"
+        android:id="@+id/imgAnimation"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal" />
