--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.camera.CameraFragment">
 
+
     <ImageView
+        android:id="@+id/img_Camera"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:id="@+id/img_Camera"
         android:background="@color/black" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal">
+
+
         <Button
-            android:id="@+id/take_picture"
+            android:id="@+id/take_Picture"
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="70dp"
             android:text="Take a photo" />
+
+        <Button
+            android:id="@+id/save_Image"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="60dp"
+            android:text="Save image" />
+
+    </LinearLayout>
+
 </LinearLayout>
