show image imformation

--- a/app/src/main/res/menu/image_view_option_drawer.xml
+++ b/app/src/main/res/menu/image_view_option_drawer.xml
@@ -7,7 +7,7 @@
         <item android:id="@+id/imgViewUseAs"
             android:title="Use As"/>
         <item android:id="@+id/imgViewDetail"
-            android:title="Detail"/>
+            android:title="Details"/>
         <item android:id="@+id/imgViewHide"
             android:title="Hide"/>
         <item android:id="@+id/imgViewLock"
