--- a/app/src/main/res/layout/cropimage.xml
+++ b/app/src/main/res/layout/cropimage.xml
@@ -2,16 +2,21 @@
 <RelativeLayout android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
     <view
         android:id="@+id/image"
         class="com.example.galleryapp.utils.cropImage.CropImageView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_x="0dip"
-        android:layout_y="0dip"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="100dp"
+        android:layout_x="10dip"
+        android:layout_y="10dip"
         android:background="#55000000" />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="50dp"
@@ -21,22 +26,13 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
 
-
-        <Button
-            android:id="@+id/save"
-            style="@style/CropButton"
-            android:layout_width="120dp"
-            android:layout_height="fill_parent"
-            android:layout_alignParentLeft="true"
-            android:text="@string/save" />
-
         <ImageButton
             android:id="@+id/rotateLeft"
             style="@style/CropButton"
             android:layout_width="50dp"
             android:layout_height="fill_parent"
-            android:layout_toRightOf="@id/save"
             android:src="@drawable/ic_rotate_left"
+            android:layout_alignParentLeft="true"
             android:scaleType="fitCenter"/>
 
         <ImageButton
@@ -46,15 +42,22 @@
             android:layout_height="fill_parent"
             android:layout_toRightOf="@id/rotateLeft"
             android:src="@drawable/ic_rotate_right"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter" />
+
+        <Button
+            android:id="@+id/save"
+            style="@style/CropButton"
+            android:layout_width="120dp"
+            android:layout_height="fill_parent"
+            android:layout_toRightOf="@id/rotateRight"
+            android:text="@string/save" />
 
         <Button
             android:id="@+id/discard"
             style="@style/CropButton"
             android:layout_width="120dp"
             android:layout_height="fill_parent"
-            android:layout_toRightOf="@id/rotateRight"
+            android:layout_toRightOf="@id/save"
             android:text="@string/cancel" />
-
     </RelativeLayout>
 </RelativeLayout>
