import edit image

--- a/app/src/main/res/menu/image_view_option_drawer.xml
+++ b/app/src/main/res/menu/image_view_option_drawer.xml
@@ -16,6 +16,8 @@
             android:title="Lock"/>
         <item android:id="@+id/imgShare"
             android:title="Share"/>
+        <item android:id="@+id/imgEdit"
+            android:title="Edit"/>
         <item android:id="@+id/imgViewDelete"
             android:title="Delete"/>
     </group>
