--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -10,6 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@drawable/border"
         android:orientation="horizontal">
 
         <TextView
@@ -17,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingEnd="8dp"
-            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textColor="@color/teal_700"
             android:text="@string/sort_type"
             tools:ignore="RtlSymmetry" />
 
@@ -28,10 +31,14 @@
             android:layout_weight="1"
             android:layout_gravity="center" />
 
-        <Button
-            android:id="@+id/btnSort"
+        <TextView
+            android:id="@+id/txtSort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textSize="20sp"
+            android:textColor="@color/purple_200"
+            android:background="#333"
             android:text="@string/up_icon" />
     </LinearLayout>
 
