--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,7 +35,7 @@
         tools:layout="@layout/fragment_hidden" />
     <fragment
         android:id="@+id/nav_locked"
-        android:name="com.example.galleryapp.ui.locked.LockedFragment"
+        android:name="com.example.galleryapp.ui.hidden.locked.LockedFragment"
         android:label="@string/locked"
         tools:layout="@layout/fragment_locked" />
     <fragment
