--- a/app/src/main/res/menu/image_view_option_drawer.xml
+++ b/app/src/main/res/menu/image_view_option_drawer.xml
@@ -7,7 +7,7 @@
         <item android:id="@+id/imgViewUseAs"
             android:title="Use As"/>
         <item android:id="@+id/imgViewEdit"
-            android:title="Edit"/>
+            android:title="Crop & Rotate"/>
         <item android:id="@+id/imgViewDetail"
             android:title="Details"/>
         <item android:id="@+id/imgViewHide"
