--- a/app/src/main/res/layout/picture_item_gird.xml
+++ b/app/src/main/res/layout/picture_item_gird.xml
@@ -1,33 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/picLayout"
-    android:layout_width="90dp"
-    android:layout_height="90dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft=".5dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginRight=".5dp"
-        android:layout_marginBottom=".5dp"
-        app:cardCornerRadius="1dp">
+    <ImageView
+        android:id="@+id/picture"
+        android:paddingBottom="8dp"
+        android:paddingRight="5dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:scaleType="centerCrop"
+        android:layout_gravity="center"
+        tools:ignore="ContentDescription" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/picture"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                tools:ignore="ContentDescription" />
-        </FrameLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-</RelativeLayout>
+</LinearLayout>
