--- a/app/src/main/res/menu/gallery_menu.xml
+++ b/app/src/main/res/menu/gallery_menu.xml
@@ -17,6 +17,6 @@
     <item
         android:id="@+id/mnuFilter"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/filter"
+        android:icon="@drawable/ic_baseline_filter_alt_24"
         android:title="@string/filters" />
 </menu>
