--- a/app/src/main/res/layout/picture_browser_pager.xml
+++ b/app/src/main/res/layout/picture_browser_pager.xml
@@ -7,7 +7,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="500dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/image" />
 
 
