--- a/app/src/main/res/menu/image_view_option_drawer.xml
+++ b/app/src/main/res/menu/image_view_option_drawer.xml
@@ -2,23 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:id="@+id/image_view_option_drawer"
         >
-        <item android:id="@+id/imgViewSlideshow"
-            android:title="Slideshow"/>
-        <item android:id="@+id/imgViewUseAs"
-            android:title="Use As"/>
-        <item android:id="@+id/imgEdit"
-            android:title="Edit"/>
-        <item android:id="@+id/imgViewHide"
-            android:title="Hide"/>
-        <item android:id="@+id/imgViewLock"
-            android:title="Lock"/>
-        <item android:id="@+id/imgWallpaper"
-            android:title="Set Wallpaper"/>
-        <item android:id="@+id/imgShare"
-            android:title="Share"/>
-        <item android:id="@+id/imgViewDelete"
-            android:title="Delete"/>
-        <item android:id="@+id/imgViewDetail"
-            android:title="Details"/>
+        <item
+            android:id="@+id/imgEdit"
+            android:title="@string/edit" />
+        <item
+            android:id="@+id/imgViewHide"
+            android:title="@string/hide" />
+        <item
+            android:id="@+id/imgViewLock"
+            android:title="@string/lock" />
+        <item
+            android:id="@+id/imgWallpaper"
+            android:title="@string/set_wallpaper" />
+        <item
+            android:id="@+id/imgShare"
+            android:title="@string/share" />
+        <item
+            android:id="@+id/imgViewDelete"
+            android:title="@string/delete" />
+        <item
+            android:id="@+id/imgViewDetail"
+            android:title="@string/details" />
     </group>
 </menu>
