--- a/app/src/main/res/layout/fragment_folder.xml
+++ b/app/src/main/res/layout/fragment_folder.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.album.AlbumFragment">
+    tools:context=".ui.folder.FolderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerAlbum"
+        android:id="@+id/recyclerFolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
