--- a/app/src/main/res/layout/fragment_picture_of_folder.xml
+++ b/app/src/main/res/layout/fragment_picture_of_folder.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.album.PictureOfFolderFragment">
+    tools:context=".ui.folder.PictureOfFolderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
