--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_album"
-        android:name="com.example.galleryapp.ui.album.AlbumFragment"
-        android:label="@string/album"
-        tools:layout="@layout/fragment_album" />
+        android:id="@+id/nav_folder"
+        android:name="com.example.galleryapp.ui.folder.FolderFragment"
+        android:label="@string/folders"
+        tools:layout="@layout/fragment_folder" />
 
     <fragment
         android:id="@+id/nav_camera"
