--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/fragment_folder" />
 
     <fragment
+        android:id="@+id/nav_album"
+        android:name="com.example.galleryapp.ui.album.AlbumFragment"
+        android:label="@string/album"
+        tools:layout="@layout/fragment_album" />
+
+    <fragment
         android:id="@+id/nav_camera"
         android:name="com.example.galleryapp.ui.camera.CameraFragment"
         android:label="@string/camera"
