--- a/app/src/main/res/menu/image_view_option_drawer.xml
+++ b/app/src/main/res/menu/image_view_option_drawer.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:id="@+id/image_view_option_drawer"
         >
-        <item android:id="@+id/imgAddAlbum"
-            android:title="Add to Album"/>
+        <item
+            android:id="@+id/imgAddAlbum"
+            android:title="@string/add_to_album" />
         <item
             android:id="@+id/imgEdit"
             android:title="@string/edit" />
