--- a/app/src/main/res/layout/fragment_picture_show.xml
+++ b/app/src/main/res/layout/fragment_picture_show.xml
@@ -3,8 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    tools:context=".ui.showImage.PictureShowFragment">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/imagePager"
