refactor db query callback & load favorites images

--- a/app/src/main/res/menu/image_view_option_drawer.xml
+++ b/app/src/main/res/menu/image_view_option_drawer.xml
@@ -6,6 +6,9 @@
             android:id="@+id/imgAddAlbum"
             android:title="@string/add_to_album" />
         <item
+                android:id="@+id/imgAddFavorite"
+                android:title="@string/add_to_favorites" />
+        <item
             android:id="@+id/imgEdit"
             android:title="@string/edit" />
         <item
