--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,9 @@
     </style>
     <style name="Theme.GalleryApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="Theme.GalleryApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="NavigationViewStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontWeight">300</item>
+        <item name="android:listPreferredItemHeightSmall">40dp</item>
+    </style>
 </resources>
