--- a/app/src/main/res/layout/fragment_picture_show.xml
+++ b/app/src/main/res/layout/fragment_picture_show.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/black"
-    android:animateLayoutChanges="true"
-    tools:context=".ui.showImage.PictureShowFragment">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:background="@color/black"
+             android:animateLayoutChanges="true"
+             tools:context=".ui.showImage.PictureShowFragment">
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/imagePager"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:scaleType="fitCenter">
+            android:id="@+id/imagePager"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:scaleType="fitCenter">
 
     </androidx.viewpager.widget.ViewPager>
 
@@ -29,25 +28,25 @@
             android:background="@color/semi_transparent_black">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/edit_white"
-                android:layout_margin="10dp"/>
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/edit_white"
+                    android:layout_margin="10dp" android:id="@+id/imgEdit"/>
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/white_outline_favourite"
-                android:layout_margin="10dp"/>
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/white_outline_favourite"
+                    android:layout_margin="10dp" android:id="@+id/imgFavorite"/>
             <ImageView
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:src="@drawable/share_white"
-                android:layout_margin="10dp"/>
+                    android:layout_width="38dp"
+                    android:layout_height="38dp"
+                    android:src="@drawable/share_white"
+                    android:layout_margin="10dp" android:id="@+id/imgShare"/>
             <ImageView
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:src="@drawable/trash_white"
-                android:layout_margin="10dp"/>
+                    android:layout_width="38dp"
+                    android:layout_height="38dp"
+                    android:src="@drawable/trash_white"
+                    android:layout_margin="10dp" android:id="@+id/imgDelete"/>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
