--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,10 +40,10 @@
         android:label="@string/hidden"
         tools:layout="@layout/fragment_hidden" />
     <fragment
-        android:id="@+id/nav_locked"
-        android:name="com.example.galleryapp.ui.hidden.locked.LockedFragment"
-        android:label="@string/locked"
-        tools:layout="@layout/fragment_locked" />
+            android:id="@+id/nav_locked"
+            android:name="com.example.galleryapp.ui.locked.LockedFragment"
+            android:label="@string/locked"
+            tools:layout="@layout/fragment_locked" />
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.galleryapp.ui.setting.SettingFragment"
