--- a/app/src/main/res/layout/picture_browser_pager.xml
+++ b/app/src/main/res/layout/picture_browser_pager.xml
@@ -6,10 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
+        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/image" />
+        android:layout_marginTop="20dp" />
 
 
     <!--android:transitionName="picture"
