--- a/app/src/main/res/layout/fragment_picture_show.xml
+++ b/app/src/main/res/layout/fragment_picture_show.xml
@@ -20,46 +20,50 @@
         android:orientation="vertical"
         android:layout_gravity="bottom">
 
-        <LinearLayout android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:background="@color/semi_transparent_black">
-
-            <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/edit_white"
-                    android:layout_margin="10dp" android:id="@+id/imgEdit"/>
-            <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/white_outline_favourite"
-                    android:layout_margin="10dp" android:id="@+id/imgFavorite"/>
-            <ImageView
-                    android:layout_width="38dp"
-                    android:layout_height="38dp"
-                    android:src="@drawable/share_white"
-                    android:layout_margin="10dp" android:id="@+id/imgShare"/>
-            <ImageView
-                    android:layout_width="38dp"
-                    android:layout_height="38dp"
-                    android:src="@drawable/trash_white"
-                    android:layout_margin="10dp" android:id="@+id/imgDelete"/>
-        </LinearLayout>
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/indicatorRecycler"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="50dp"
+
             android:clickable="true"
             android:visibility="gone"
             android:focusable="true">
 
         </androidx.recyclerview.widget.RecyclerView>
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="20dp"
+            android:background="@color/semi_transparent_black">
+
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/edit_white"
+                android:layout_margin="10dp"
+                android:id="@+id/imgEdit"/>
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/white_outline_favourite"
+                android:layout_marginLeft="50dp"
+                android:id="@+id/imgFavorite"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/share_white"
+                android:layout_marginLeft="50dp"
+                android:id="@+id/imgShare"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/trash_white"
+                android:layout_marginLeft="50dp"
+                android:id="@+id/imgDelete"/>
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
